--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <td><h1>VYSHNAVI J</h1>
       <p><em>I AM A <strong>CREATIVE STUDENT</strong>.</em></p>
       <P>
-        <i>I AM A STUDENT .I LOVE TO LEARN NEW THINGS AND STUDY TOO!!</i></td>
+        <i>I LOVE TO LEARN NEW THINGS AND STUDY TOO!!</i></td>
     </tr>
   </table>
 
