added background color

--- a/index.html
+++ b/index.html
@@ -5,7 +5,20 @@
   <meta charset="utf-8">
   <title>💜Vyshnavi's personal Site💜</title>
 </head>
+<style>
 
+   body{
+     background-color:mistyRose;
+     }
+
+   hr{
+     background-color: white;
+     border-style: double;
+     height:3 ;
+   }
+
+
+ </style>
 <body>
   <table cellspacing=20>
     <tr>
