--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   </table>
 
 
-  <hr size=2 noshade color="#FFA000" >
+  <hr size=2 noshade color="#FFA000" width="60%">
   </P>
   <h3>Education</h3>
   <ul>
@@ -85,7 +85,7 @@
    </table>
    <hr size="1" color="#4DD0E1">
    TRY MY FAV RECIPE <a href="https://www.youtube.com/watch?v=0zQWAfpwGrg&t=298s"> PANCAKES.</a>
-   <hr color="#FFA000" size="2">
+   <hr color="#FFA000" size="2" width="60%">
    <a href="contactme.html">CONTACT ME</a>
 </body>
 
