--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     </tr>
    </table>
    <hr size="1" color="#4DD0E1">
-   TRY MY FAV RECIPE <a href="https://www.youtube.com/watch?v=0zQWAfpwGrg&t=298s"> PANCAKES.</a>
+   TRY MY <a href="https://vyshu8.github.io/pancakes/">FAV RECIPE</a> <a href="https://www.youtube.com/watch?v=0zQWAfpwGrg&t=298s"> PANCAKES.</a>
    <hr color="#FFA000" size="2" width="60%">
    <a href="contactme.html">CONTACT ME</a>
 </body>
