--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html lang="en" dir="ltr">
 
 <head>
+  
   <meta charset="utf-8">
   <title>💜Vyshnavi's personal Site💜</title>
+  <link rel="stylesheet" href="C:\Users\VYSHNAVI\OneDrive\Documents\web development\css\style.css" />
 </head>
 <style>
 
