update style in index

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   
   <meta charset="utf-8">
   <title>💜Vyshnavi's personal Site💜</title>
-  <link rel="stylesheet" href="C:\Users\VYSHNAVI\OneDrive\Documents\web development\css\style.css" />
+  <link rel="stylesheet" href="style.css" />
 </head>
 <style>
 
