--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </tr>
   </table></i></b>
 
-<link rel="stylesheet" href="C:\Users\VYSHNAVI\OneDrive\Documents\web development\css\style.css" />
+<link rel="stylesheet" href="style.css" />
   <hr size=2   width="60%"   border-top-style:"dotted" border-color: "orange" border-width:"30px";>
   </P>
   <h3>Education</h3>
