--- a/books.html
+++ b/books.html
@@ -2,7 +2,9 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+        <link rel="stylesheet" href="style.css" />
     <title>MY FAV BOOKS</title>
+    <h1>MY FAVOURITE BOOKS !!</h1>
   </head>
   <body>
     <ol>
