--- a/hobbies.html
+++ b/hobbies.html
@@ -2,10 +2,12 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="style.css" />
+
     <title>My Hobbies</title>
   </head>
   <body>
-    <h3>HOBBIES</h3>
+    <h1>HOBBIES</h1>
      
       <ol>
       1.CODING/PROGRAMMING
