update  style in contactme.html

--- a/contactme.html
+++ b/contactme.html
@@ -2,10 +2,13 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="style.css" />
+
     <title>CONTACT ME!</title>
+    <h1>CONTACT ME!</h1
   </head>
   <body>
-  <h2>HELLO! PLEASE TYPE YOUR MESSAGE HERE.</h2>
+  <h3>HELLO! PLEASE TYPE YOUR MESSAGE HERE.</h3>
     <form  action="mailto:infovysh8@gmail.com" method="post" enctype="text/plain">
       <label>YOUR NAME:</label>
       <br>
