--- a/books.html
+++ b/books.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="C:\Users\VYSHNAVI\OneDrive\Documents\web development\css\style.css" />
+    <link rel="stylesheet" href="style.css" />
 
     <title><h1>MY FAV BOOKS</h1></title>
     <h1>MY FAVOURITE BOOKS !!</h1>
