--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="utf-8">
+  <link rel="icon" href="C:\Users\VYSHNAVI\OneDrive\Documents\favicon.ico">
   <title>💜Vyshnavi's personal Site💜</title>
 
 </head>
