--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <link rel="icon" href="C:\Users\VYSHNAVI\OneDrive\Documents\favicon.ico">
+  <link rel="icon" href="C:\Users\VYSHNAVI\OneDrive\Documents\favicon (1).ico?v=2">
   <title>💜Vyshnavi's personal Site💜</title>
 
 </head>
