--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   
   <title>💜Vyshnavi's personal Site💜</title>
-  <link rel="icon" href="C:\Users\VYSHNAVI\OneDrive\Documents\favicon (1).ico?v=2">
+  <link rel="icon" href="C:\Users\VYSHNAVI\OneDrive\Documents\favicon (1).ico">
 </head>
 
 
